--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 
       <nav class="navbar">
         <ul>
+          <li><a href="index.html" class="box-nav menu-boy">Home</a></li>
+          <li><a href="residences.html" class="box-nav menu-boy">Residences</a></li>
           <li><a href="neighborhood.html" class="box-nav">Neighborhood</a></li>
           <li><a href="contact.html" class="box-nav">Contact</a></li>
         </ul>
@@ -89,7 +91,7 @@
             <img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
           </div>
           <div class="swiper-slide">
-            <img src="assets/img/gallery/gallery-11.jpg" class="img-fluid" alt="">
+            <img src="assets/img/gallery/gallery-17.jpg" class="img-fluid" alt="">
           </div>
           <div class="swiper-slide">
             <img src="assets/img/gallery/gallery-5.jpg" class="img-fluid" alt="">
@@ -114,7 +116,7 @@
       <div class="row">
         <div class="col-sm-8 col-12">
           <div class="gallery-item">
-            <img src="assets/img/gallery/gallery-1.jpg" class="img-fluid img-hello" alt="">
+            <img src="assets/img/gallery/gallery-18.jpg" class="img-fluid img-hello" alt="">
           </div>
         </div>
         <div class="col-sm-4 col-12 d-flex align-items-center">
@@ -156,7 +158,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-            <p class="text-center pt-3">Gazebo</p>
+            <p class="text-center pt-3">Pavilion</p>
           </div><!-- End Gallery Item -->
           <div class=" col-lg-4 col-md-6">
             <div class="gallery-item">
@@ -167,7 +169,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-            <p class="text-center pt-3">Kitchen Lounge</p>
+            <p class="text-center pt-3">Chef Kitchen</p>
           </div><!-- End Gallery Item -->
           <div class=" col-lg-4 col-md-6">
             <div class="gallery-item">
@@ -200,7 +202,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-            <p class="text-center pt-3">Sitting Area</p>
+            <p class="text-center pt-3">Lounge</p>
           </div><!-- End Gallery Item -->
           <div class=" col-lg-4 col-md-6">
             <div class="gallery-item">
@@ -261,7 +263,7 @@
                 you experience the extraordinary everyday.
               </p>
             </div>
-            <a href="" class="text-btn">
+            <a href="residences.html" class="text-btn">
               <button class="my-4">
                 See More
               </button>
