--- a/neighborhood.html
+++ b/neighborhood.html
@@ -45,7 +45,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class=" box-nav">Home</a></li>
+          <li><a href="index.html" class="active box-nav">Home</a></li>
           <li><a href="residences.html" class="box-nav">Residences</a></li>
         </ul>
       </nav><!-- .navbar -->
@@ -56,7 +56,9 @@
 
       <nav class="navbar">
         <ul>
-          <li><a href="neighborhood.html" class="active box-nav">Neighborhood</a></li>
+          <li><a href="index.html" class="box-nav menu-boy">Home</a></li>
+          <li><a href="residences.html" class="box-nav menu-boy">Residences</a></li>
+          <li><a href="neighborhood.html" class="box-nav">Neighborhood</a></li>
           <li><a href="contact.html" class="box-nav">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
@@ -78,10 +80,12 @@
               <div class="section-header text-center">
                 <p>Neighborhood</p>
               </div>
-              <p class="text-justify"> In one of the most happening and new business district of Jakarta, Verde Two is
+              <p class="text-justify"> In one of the most happening and new business district of Jakarta, Verde Two
+                is
                 right in the heart of
                 the Golden
-                Triangle Jakarta sitting on prime real estate land. Flanked by 2 primary arteries – Rasuna Said and Dr.
+                Triangle Jakarta sitting on prime real estate land. Flanked by 2 primary arteries – Rasuna Said and
+                Dr.
                 Satrio, this
                 development is ideally situated with all the city conveniences to office, retail and recreation
                 amenities but yet
