--- a/residences.html
+++ b/residences.html
@@ -45,8 +45,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class=" box-nav">Home</a></li>
-          <li><a href="residences.html" class=" active box-nav">Residences</a></li>
+          <li><a href="index.html" class="active box-nav">Home</a></li>
+          <li><a href="residences.html" class="box-nav">Residences</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -56,6 +56,8 @@
 
       <nav class="navbar">
         <ul>
+          <li><a href="index.html" class="box-nav menu-boy">Home</a></li>
+          <li><a href="residences.html" class="box-nav menu-boy">Residences</a></li>
           <li><a href="neighborhood.html" class="box-nav">Neighborhood</a></li>
           <li><a href="contact.html" class="box-nav">Contact</a></li>
         </ul>
@@ -80,11 +82,19 @@
         </div>
 
         <div class="row">
-          <div class="col-6">
+          <div class="col-6" style="border: 1px solid black;">
             <div class="terraverde text-center">
-              <div class="section-header">
+              <div class="section-header p-0">
                 <p>Terraverde</p>
                 <h2>Tower</h2>
+              </div>
+              <div class="row">
+                <div class="col-6 pt-3">
+                  <p>3 Bedroom</p>
+                </div>
+                <div class="col-6 pt-3">
+                  <p>2 Bedroom</p>
+                </div>
               </div>
             </div>
           </div>
@@ -116,7 +126,7 @@
                 </div>
                 <div>
                   <i class="las la-utensils fs-icon-lg "></i>
-                  <p class="pt-2">2 Kitchen</p>
+                  <p class="pt-2">1 Maid Bedroom</p>
                 </div>
                 <div>
                   <i class="las la-expand fs-icon-lg"></i>
@@ -208,7 +218,7 @@
               <div class="d-flex flex-row gap-3 fw-medium pb-4">
                 <div class="">
                   <i class="las la-bed fs-icon-lg"></i>
-                  <p class="pt-2">2/3 Bedroom</p>
+                  <p class="pt-2">3 Bedroom</p>
                 </div>
                 <div>
                   <i class="las la-shower fs-icon-lg"></i>
@@ -216,20 +226,22 @@
                 </div>
                 <div>
                   <i class="las la-utensils fs-icon-lg "></i>
-                  <p class="pt-2">2 Kitchen</p>
+                  <p class="pt-2">1 Maid Bedroom</p>
                 </div>
                 <div>
                   <i class="las la-expand fs-icon-lg"></i>
-                  <p class="pt-2">137/165 m&sup2;</p>
+                  <p class="pt-2">211 m&sup2;</p>
                 </div>
               </div>
               <div class="paragraph">
                 <p class="text-justify">
-                  Terraverde residences offer grand living and entertainment. The 186 two-to-three bedroom homes boast
+                  Terraverde residences offer grand living and entertainment. The 186 two-to-three bedroom homes
+                  boast
                   expansive
                   dimensions with floor-to-ceiling windows and high ceilings. Distinguished public spaces feature
                   generous proportions,
-                  fine flooring, and custom millwork. Luxurious bathrooms and kitchens are fitted with imported stones
+                  fine flooring, and custom millwork. Luxurious bathrooms and kitchens are fitted with imported
+                  stones
                   and Dornbracht
                   fixtures. From tranquil homes to lush gardens, it's a place for repose and discovery.
                 </p>
@@ -281,14 +293,102 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-6">
-                <img src="assets/img/terra-photo/terra-type-a1.jpg" class="img-fluid img-hello mt-4" alt="">
-                <h4 class="pt-5 text-center"> Unit 2 Bedrooms </h4>
-              </div>
-              <div class="col-6 d-flex align-items-center">
+              <div class="d-flex align-items-center">
                 <div class="pb-5">
                   <img src="assets/img/terra-photo/terra-type-b1.jpg" class="img-fluid img-hello mt-4" alt="">
                   <h4 class="pt-5 text-center"> Unit 3 Bedrooms </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row section-p1">
+            <div class="col-sm-5 col-12">
+              <div class="pb-5">
+                <h1>Unlock the door</h1>
+                <h1>to your new home.</h1>
+              </div>
+              <div class="d-flex flex-row gap-3 fw-medium pb-4">
+                <div class="">
+                  <i class="las la-bed fs-icon-lg"></i>
+                  <p class="pt-2">2 Bedroom</p>
+                </div>
+                <div>
+                  <i class="las la-shower fs-icon-lg"></i>
+                  <p class="pt-2">3 Bathroom</p>
+                </div>
+                <div>
+                  <i class="las la-utensils fs-icon-lg "></i>
+                  <p class="pt-2">1 Maid Bedroom</p>
+                </div>
+                <div>
+                  <i class="las la-expand fs-icon-lg"></i>
+                  <p class="pt-2">177 m&sup2;</p>
+                </div>
+              </div>
+              <div class="paragraph">
+                <p class="text-justify">
+                  Terraverde residences offer grand living and entertainment. The 186 two-to-three bedroom homes
+                  boast
+                  expansive
+                  dimensions with floor-to-ceiling windows and high ceilings. Distinguished public spaces feature
+                  generous proportions,
+                  fine flooring, and custom millwork. Luxurious bathrooms and kitchens are fitted with imported
+                  stones
+                  and Dornbracht
+                  fixtures. From tranquil homes to lush gardens, it's a place for repose and discovery.
+                </p>
+              </div>
+              <div class="detail-unit row">
+                <div class="col-6">
+                  <div class="d-flex gap-3 align-items-center pb-2">
+                    <i class="las la-lock fs-icon"></i>
+                    <p class="m-0">24 Hour Security</p>
+                  </div>
+                  <div class="d-flex gap-3 align-items-center pb-2">
+                    <i class="las la-dumbbell fs-icon"></i>
+                    <p class="m-0">Fitness center</p>
+                  </div>
+                  <div class="d-flex gap-3 align-items-center pb-2">
+                    <i class="las la-car fs-icon"></i>
+                    <p class="m-0">Car Park</p>
+                  </div>
+                  <div class="d-flex gap-3 align-items-center pb-2">
+                    <i class="las la-check-double fs-icon"></i>
+                    <p class="m-0">Double Gate</p>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="d-flex gap-3 align-items-center pb-2">
+                    <i class="las la-briefcase fs-icon"></i>
+                    <p class="m-0">Business Center</p>
+                  </div>
+                  <div class="d-flex gap-3 align-items-center pb-2">
+                    <i class="las la-swimming-pool fs-icon"></i>
+                    <p class="m-0">Pool</p>
+                  </div>
+                  <div class="d-flex gap-3 align-items-center pb-2">
+                    <i class="las la-paw fs-icon"></i>
+                    <p class="m-0">Pet Friendly</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-7 col-12">
+              <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+              <div class="row my-4">
+                <div class="col-6">
+                  <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+                </div>
+                <div class="col-6">
+                  <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="d-flex align-items-center">
+                <div class="pb-5">
+                  <img src="assets/img/terra-photo/terra-type-a1.jpg" class="img-fluid img-hello mt-4" alt="">
+                  <h4 class="pt-5 text-center"> Unit 2 Bedrooms </h4>
                 </div>
               </div>
             </div>
