--- a/residences.html
+++ b/residences.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="row">
-          <div class="col-6" style="border: 1px solid black;">
+          <div class="col-6">
             <div class="terraverde text-center">
               <div class="section-header p-0">
                 <p>Terraverde</p>
