--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/logo-verde.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo-verde.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -79,9 +79,8 @@
                 <p>Contact</p>
               </div>
               <p class="text-justify">
-                Should you have any inquiry or request, kindly reach us via inquiry box below. We
-                will be pleased to received your email
-                and will get back to you within 48 hours.
+                Should you have any inquiry or request, kindly reach us via the box below. We will be pleased to
+                assist you over WhatsApp and will get back to you.
               </p>
               <a href="https://wa.me/6282317164462">
                 <button class="my-5">
@@ -106,9 +105,12 @@
         <div class="row">
           <div class=" d-flex justify-content-center align-items-center">
             <ul class="list-unstyled nav-links social nav-right text-lg-right">
-              <li><a href="#"><span class="lab la-youtube" style="font-size: 25px;"></span></a></li>
-              <li><a href="#"><span class="lab la-facebook-f" style="font-size: 20px;"></span></a></li>
-              <li><a href="#"><span class="lab la-instagram" style="font-size: 25px;"></span></a></li>
+              <li><a href="https://www.youtube.com/channel/UCKA0OBv14C6pSNpb3pcNNOA?app=desktop"><span
+                    class="lab la-youtube" style="font-size: 25px;"></span></a></li>
+              <li><a href="https://web.facebook.com/people/Ruls-Property/100094568147290/"><span
+                    class="lab la-facebook-f" style="font-size: 20px;"></span></a></li>
+              <li><a href="https://www.instagram.com/rulsproperty/"><span class="lab la-instagram"
+                    style="font-size: 25px;"></span></a></li>
             </ul>
           </div>
         </div>
@@ -129,8 +131,9 @@
   </footer>
   <!-- Footer End -->
 
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="https://wa.me/6282317164462" class="scroll-top d-flex align-items-center justify-content-center">
+    <i class="lab la-whatsapp" style="font-size: 35px;"></i>
+  </a>
 
   <div id="preloader">
     <div class="line"></div>
