--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/logo-verde.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo-verde.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -114,12 +114,12 @@
         <p>Amenities</p>
       </div>
       <div class="row">
-        <div class="col-sm-8 col-12">
+        <div class="col-sm-12 col-md-8 col-12">
           <div class="gallery-item">
             <img src="assets/img/gallery/gallery-18.jpg" class="img-fluid img-hello" alt="">
           </div>
         </div>
-        <div class="col-sm-4 col-12 d-flex align-items-center">
+        <div class="col-sm-12 col-md-4 col-12 d-flex align-items-center">
           <p class="pt-4 text-justify">
             The Verde Two experience starts at the majestic double-height Grand Lobby, an embodiment of Yabu
             Pushelberg’s bold
@@ -399,7 +399,8 @@
   </footer>
   <!-- Footer End -->
 
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i>
+  <a href="https://wa.me/6282317164462" class="scroll-top d-flex align-items-center justify-content-center">
+    <i class="lab la-whatsapp" style="font-size: 35px;"></i>
   </a>
 
   <div id="preloader">
