--- a/neighborhood.html
+++ b/neighborhood.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/logo-verde.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo-verde.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active box-nav">Home</a></li>
+          <li><a href="index.html" class="box-nav">Home</a></li>
           <li><a href="residences.html" class="box-nav">Residences</a></li>
         </ul>
       </nav><!-- .navbar -->
@@ -58,7 +58,7 @@
         <ul>
           <li><a href="index.html" class="box-nav menu-boy">Home</a></li>
           <li><a href="residences.html" class="box-nav menu-boy">Residences</a></li>
-          <li><a href="neighborhood.html" class="box-nav">Neighborhood</a></li>
+          <li><a href="neighborhood.html" class="active box-nav">Neighborhood</a></li>
           <li><a href="contact.html" class="box-nav">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
@@ -99,13 +99,12 @@
     <!-- ======= Services Section ======= -->
     <section id="services" class="services pb-5">
       <div class="container">
-
         <div class="row gy-4">
 
           <div class="col-xl-3 col-md-6 d-flex">
             <div class="service-item position-relative">
               <i class="las la-hospital"></i>
-              <h4><a href="" class="stretched-link">Hospitals</a></h4>
+              <h4>Hospitals</h4>
               <p></p>
               <li>MMC Hospital</li>
               <li>Siloam Hospital</li>
@@ -116,7 +115,7 @@
           <div class="col-xl-3 col-md-6 d-flex">
             <div class="service-item position-relative">
               <i class="las la-graduation-cap"></i>
-              <h4><a href="" class="stretched-link">Schools</a></h4>
+              <h4>Schools</h4>
               <p></p>
               <li>High Scope Indonesia</li>
               <li>Regality Academy</li>
@@ -127,7 +126,7 @@
           <div class="col-xl-3 col-md-6 d-flex">
             <div class="service-item position-relative">
               <i class="las la-utensils"></i>
-              <h4><a href="" class="stretched-link">Restaurants</a></h4>
+              <h4>Restaurants</h4>
               <p></p>
               <li>Bluegrass Bar &amp; Grill</li>
               <li>Henshin</li>
@@ -138,7 +137,7 @@
           <div class="col-xl-3 col-md-6 d-flex">
             <div class="service-item position-relative">
               <i class="las la-shopping-cart"></i>
-              <h4><a href="" class="stretched-link">Shops</a></h4>
+              <h4>Shop</h4>
               <p></p>
               <li>Epicentrum Walk</li>
               <li>Grand Indonesia</li>
@@ -160,9 +159,12 @@
         <div class="row">
           <div class=" d-flex justify-content-center align-items-center">
             <ul class="list-unstyled nav-links social nav-right text-lg-right">
-              <li><a href="#"><span class="lab la-youtube" style="font-size: 25px;"></span></a></li>
-              <li><a href="#"><span class="lab la-facebook-f" style="font-size: 20px;"></span></a></li>
-              <li><a href="#"><span class="lab la-instagram" style="font-size: 25px;"></span></a></li>
+              <li><a href="https://www.youtube.com/channel/UCKA0OBv14C6pSNpb3pcNNOA?app=desktop"><span
+                    class="lab la-youtube" style="font-size: 25px;"></span></a></li>
+              <li><a href="https://web.facebook.com/people/Ruls-Property/100094568147290/"><span
+                    class="lab la-facebook-f" style="font-size: 20px;"></span></a></li>
+              <li><a href="https://www.instagram.com/rulsproperty/"><span class="lab la-instagram"
+                    style="font-size: 25px;"></span></a></li>
             </ul>
           </div>
         </div>
@@ -183,8 +185,9 @@
   </footer>
   <!-- Footer End -->
 
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="https://wa.me/6282317164462" class="scroll-top d-flex align-items-center justify-content-center">
+    <i class="lab la-whatsapp" style="font-size: 35px;"></i>
+  </a>
 
   <div id="preloader">
     <div class="line"></div>
