--- a/residences.html
+++ b/residences.html
@@ -175,14 +175,16 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-7 col-md-6 col-sm-12">
-              <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+            <div class="col-sm-7 col-md-6 col-sm-12 d-grid align-items-center">
+              <img src="assets/img/monte-photo/monte-3-bedroom-(1).jpg" class="img-fluid img-hello" alt="">
               <div class="row my-4">
                 <div class="col-6">
-                  <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+                  <img src="assets/img/monte-photo/monte-3-bedroom-(2).jpg" class="img-fluid img-hello" alt=""
+                    style="height: 100%;">
                 </div>
                 <div class="col-6">
-                  <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+                  <img src="assets/img/monte-photo/monte-3-bedroom-(3).jpg" style="height: 100%;"
+                    class="img-fluid img-hello" alt="">
                 </div>
               </div>
             </div>
@@ -267,14 +269,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-7 col-md-6 col-sm-12">
-              <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+            <div class="col-sm-7 col-md-6 col-sm-12 d-grid align-items-center">
+              <img src="assets/img/terra-photo/terra-2-bedroom-(1).jpg" class="img-fluid img-hello" alt="">
               <div class="row my-4">
                 <div class="col-6">
-                  <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+                  <img src="assets/img/terra-photo/terra-2-bedroom-(2).jpg" style="height: 100%;"
+                    class="img-fluid img-hello" alt="">
                 </div>
                 <div class="col-6">
-                  <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+                  <img src="assets/img/terra-photo/terra-2-bedroom-(3).jpg" class="img-fluid img-hello" alt="">
                 </div>
               </div>
             </div>
@@ -287,7 +290,7 @@
             </div>
           </div>
           <div class="row section-p1">
-            <div class="col-sm-5 col-md-6 col-sm-12">
+            <div class="col-sm-5 col-md-6 col-sm-12 ">
               <div class="pb-5">
                 <h1>Unlock the door</h1>
                 <h1>to your new home.</h1>
@@ -358,14 +361,14 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-7 col-md-6 col-sm-12">
-              <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+            <div class="col-sm-7 col-md-6 col-sm-12 d-grid align-items-center">
+              <img src=" assets/img/terra-photo/terra-3-bedroom-(2).jpg" class="img-fluid img-hello" alt="">
               <div class="row my-4">
                 <div class="col-6">
-                  <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+                  <img src="assets/img/terra-photo/terra-3-bedroom-(1).jpg" class="img-fluid img-hello" alt="">
                 </div>
                 <div class="col-6">
-                  <img src="assets/img/monte-photo/monte-1.jpg" class="img-fluid img-hello" alt="">
+                  <img src="assets/img/terra-photo/terra-3-bedroom-(3).jpg" class="img-fluid img-hello" alt="">
                 </div>
               </div>
             </div>
